--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -9,3 +9,15 @@ img {
 .space-right{
 	margin-right: 1em;
 }
+
+.payment-btn{
+	border-radius: 3px;
+	border: none;
+	color: #fff;
+	padding: 1em 2em;
+	outline: none;
+}
+
+.paypal-btn{
+	background-color: #fe1935;
+}
