--- a/app/views/partials/_nav.haml
+++ b/app/views/partials/_nav.haml
@@ -6,7 +6,7 @@
 					=link_to root_path, class:"space-right white-text" do
 						%i.mdi-action-shopping-basket
 						Mi tienda
-					=link_to "", class:"space-right white-text" do
+					=link_to ordenes_path, class:"space-right white-text" do
 						%i.mdi-action-trending-up
 						Ordenes
 					=link_to "", class:"space-right white-text" do
