--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,3 +1,7 @@
-%h1 Bienvenido
-%p
-	=link_to "Salir", destroy_user_session_path, method: :delete
+.col-xs-12.col-md-10.center-block.no-float
+	.card.large-padding
+		.top-space
+			.col-md-3.col-xs-12.inline-block.no-padding.in-top
+				=render current_user.products
+			.col-md-9.col-xs-12.inline-block
+				=render "payments/index"
