--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -3,5 +3,5 @@
 		.top-space
 			.col-md-3.col-xs-12.inline-block.no-padding.in-top
 				=render current_user.products
-			.col-md-9.col-xs-12.inline-block
+			.col-md-9.col-xs-12.inline-block.in-top
 				=render "payments/index"
