--- a/app/views/shopping_carts/show.haml
+++ b/app/views/shopping_carts/show.haml
@@ -17,7 +17,7 @@
 					%td
 						= product.attachments.count
 						archivos
-					%td Eliminar
+					%td= link_to "Eliminar", i_sh, method: :delete
 	.top-space.large-padding.text-center.green.white-text#payment-form
 		%p.medium
 			%strong
