--- a/app/views/welcome/unregistered.haml
+++ b/app/views/welcome/unregistered.haml
@@ -1,4 +1,8 @@
-%header.green.big-padding
+%header.green.big-padding.white-text
+	.col-xs-12.tetx-center.inline-block.text-center.white.medium.bottom-space.large-padding
+		=link_to "Iniciar sesion", new_user_session_path
+	.col-xs-12.tetx-center.inline-block.text-center.white.medium.bottom-space.large-padding
+		=link_to "Crear cuenta", new_user_registration_path
 	.col-md-10.no-float.center-block
 		.col-md-6.no-padding.inline-block
 			=image_tag "tiendus.png",width:"100"
